@@ -1,3 +1,10 @@
+2012-12-20  Tom Lane  <tgl@sss.pgh.pa.us>
+
+	* test/raw_decode.c: Relax raw_decode's pixel-value checks so that
+	it will pass with more versions of libjpeg.  (There are at least
+	three in active use now, and JPEG_LIB_VERSION doesn't tell us
+	enough to uniquely identify expected results.)
+
 2012-12-12  Tom Lane  <tgl@sss.pgh.pa.us>
 
 	* libtiff/tif_print.c: Fix TIFFPrintDirectory's handling of
